# NekoClawQQReply

./: README.md  __init__.py  group_permission.py  permission.py  plugin.toml  pyproject.toml  qq_client.py  start_plugin.py  stop_plugin.py
NapCat.Shell/: conout-D9oph_Le.js  loadNapCat.js
NapCat.Shell/config/: napcat.json  napcat_3281414178.json  napcat_protocol_3281414178.json  onebot11_3281414178.json  onebot11_820040531.json  webui.json
NapCat.Shell/plugins/napcat-plugin-builtin/: index.mjs
NapCat.Shell/static/: index.html
NapCat.Shell/static/assets/: Item-CdZrGEbe.js  about-BH3jmmym.js  chunk-2QAN2V2R-CT98FNms.js  chunk-2QQAR2RD-FbOUjcXb.js  chunk-5PILOUBS-Cb7MFJEp.js  chunk-6LIX6LVT-dr66edCG.js  chunk-APIAPHLK-COQUmx15.js  chunk-B75B6XQK-Co33rFyj.js  chunk-D5XJWRAV-CxUUbn5D.js  chunk-EN4B57RQ-69fj-lVZ.js  chunk-FGM523TA-BJSiCD_V.js  chunk-IHO36JMK-BG_9Vvky.js  chunk-ITOWTN7W-BLYYmpYC.js  chunk-J6JGI6RM-DuA0QR6A.js  chunk-KQ5CH2X7-BAkmruXv.js  chunk-KVDW62ZT-DreWCdgz.js  chunk-ML27DD5T-SuDokLLb.js  chunk-MLPFQTYO-D5Q-olIC.js  chunk-NAV3ZXLI-BHOmOp1G.js  chunk-OPTZHMJX-Do8bpJg3.js  chunk-RJKRL3AU-CjtrMR1U.js  chunk-SLABUSGS-DNfUrEZk.js  chunk-SXMLSBOY-Dk8hp8Mx.js  chunk-TE6SZS6W-D1nCzmOH.js  chunk-UX7UMZL5-C7utMfiD.js  chunk-WQVQ7P2I-CK43ztKL.js  code_editor-Boe36ys4.js  codemirror-core-vkcnXJgD.js  codemirror-lang-D5Xi5jNV.js  extension-CFa5wHUJ.js  file_manager-B6mKuBfT.js  file_manager-BT-nT5D4.js  (+41 more)
NapCat.Shell/worker/: conoutSocketWorker.mjs
tests/: conftest.py  test_group_permission.py  test_permission.py  test_plugin_logic.py  test_qq_client.py
