[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neko-plugin-qq-auto-reply"
version = "0.1.0"
description = "N.E.K.O QQ auto reply plugin"
requires-python = ">=3.11,<3.13"
dependencies = [
  "N.E.K.O",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "tomli>=2.0.0",
  "tomli-w>=1.0.0",
]

[tool.uv.sources]
"N.E.K.O" = { path = "../../..", editable = true }
